@@ -25,6 +25,17 @@ read input from \fIfile\fR
 \fB\-o\fR \fIfile\fR
 send output to \fIfile\fR instead of \fBstdout\fR
 .TP
+\fB\-d\fR
+use internal dictionary to guess misread fonts.
+.TP
+\fB\-n\fR
+try to guess nikud for fonts.
+.TP
+\fB\-s\fR
+use spaces for tabs.
+.TP
+\fB\-t\fR
+indent indented lines.
 .TP
 \fB\-f\fR \fIformat\fR
 output \fIformat\fR (html text)
